Update CmdApplication.java
- Use API Utilities instead
- Use `List#of` instead of `Arrays#asList`